# proof-pay

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml
circuits/proofpay/: Nargo.toml  Prover.qualified.toml  Prover.unqualified.toml
circuits/proofpay/src/: main.nr
contracts/proofpay/: Cargo.toml
contracts/proofpay/examples/: populate_publics.rs
contracts/proofpay/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
docs/: LIVE_PROOF.md
scripts/: build-proofpay-circuit.sh  deploy-testnet.sh  dev-https.sh  exercise-testnet-escrow.sh  toml-field-to-hex.mjs  verify-testnet.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/demo/credential/: route.ts
src/app/api/demo/invoice/: route.ts
src/app/api/invoice/commitment/: route.ts
src/app/api/proof/prepare/: route.ts
src/app/claim/[invoiceId]/: page.tsx
src/contracts/proofpay/: README.md  package.json
src/contracts/proofpay/src/: index.ts
src/lib/: app-config.ts  claim-link.ts  demo-data.ts  freighter-wallet.ts  invoice-proof.ts  proof-artifacts.ts  proofpay-client.ts  proofpay.ts
