[workspace]
resolver = "2"
members = [
    "contracts/verifier",
    "contracts/proofpay"
]

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }
ultrahonk_soroban_verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", package = "ultrahonk_soroban_verifier", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

