[package]
name = "proofpay_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk_soroban_verifier = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

